--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "fs": "0.0.1-security",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-cors": "0.0.16",
     "koa-logger": "^3.2.1",
     "koa-router": "^8.0.8",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
-    "pg": "^7.18.2",
+    "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
-    "koa-better-body": "^3.3.9"
+    "koa-better-body": "^3.3.9",
+    "sequelize-cli": "^5.5.1"
   },
   "author": "",
   "license": "ISC"
