--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "path": "^0.12.7",
     "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "koa-better-body": "^3.3.9",
