--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@koa/multer": "^2.0.2",
     "@types/koa-better-body": "^3.1.2",
+    "aws-sdk": "^2.661.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-node": "0.0.1-security",
@@ -19,10 +21,13 @@
     "csvjson": "^5.1.0",
     "fs": "0.0.1-security",
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-cors": "0.0.16",
     "koa-logger": "^3.2.1",
+    "koa-multer": "^1.0.2",
     "koa-router": "^8.0.8",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
     "pg": "^8.0.0",
